# homework_2

./: .coverage  Makefile  README.txt  pyproject.toml
cart_validation_service/: app.py
cart_validation_service/database/: database.py
cart_validation_service/database/models/: __init__.py  item_model.py  receipt_model.py  special_model.py  user_model.py
cart_validation_service/endpoints/: __init__.py  check_validation.py
cart_validation_service/schemas/: __init__.py  query.py
cart_validation_service/search_user/: __init__.py  search_doctor.py  search_factory.py  search_ordinary_user.py  search_user_with_receipt.py  user_validate.py
cart_validation_service/validation_strategies/: __init__.py  common_item_validation.py  prescription_item_validation.py  special_item_validation.py  validation_factory.py
database/postgresql-docker-image/: .env  Structure.txt
database/postgresql-docker-image/cart_validation_service/: app.py
database/postgresql-docker-image/cart_validation_service/database/: database.py
database/postgresql-docker-image/cart_validation_service/database/models/: __init__.py  base_model.py
database/postgresql-docker-image/cart_validation_service/search_user/: search_doctor.py  search_factory.py  search_ordinary_user.py  search_user_with_receipt.py  user_validate.py
database/postgresql-docker-image/cart_validation_service/shema/: __init__.py  query.py
database/postgresql-docker-image/cart_validation_service/validation_strategies/: common_item_validation.py  prescription_item_validation.py  special_item_validation.py  validation_factory.py
tests/: server-dummy.py
tests/tests/: test_handler.py  test_main.py
